changed job title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Martin Rudorfer
 logo: /assets/img/rudorfer_profile.jpeg
-description: Research Fellow in Robotics and Computer Vision
+description: Lecturer in Robotics and AI
 show_downloads: false
 theme: jekyll-theme-minimal
